trial with beautifulsoap

--- a/q2.ipynb
+++ b/q2.ipynb
@@ -6,21 +6,9 @@
    "metadata": {
     "collapsed": true
    },
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "No module named BeautifulSoup",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-efdec7867591>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[1;32mfrom\u001b[0m \u001b[0mBeautifulSoup\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mBeautifulSoup\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0murllib2\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mImportError\u001b[0m: No module named BeautifulSoup"
-     ],
-     "output_type": "error"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from BeautifulSoup import BeautifulSoup\n",
+    "from bs4 import BeautifulSoup\n",
     "import urllib2"
    ]
   },
